figured out why images weren't center-aligned. fixed

--- a/css/style.css
+++ b/css/style.css
@@ -698,7 +698,7 @@ a:hover {
 .unit-article img {
   display: block;
   margin-left: auto;
-  margin-left: auto;
+  margin-right: auto;
 }
 .unit-article img.left {
   margin-right: 16px;
